// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - Copyright:  Driven from JSON data should show copyright text element 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__GridContainer-sc-12mz8xb-1 iQBAM MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX MuiGrid-item MuiGrid-grid-xs-12"
    >
      <a
        class="components__DeviceToggleLink-sc-12mz8xb-3 cbjhUi"
        data-testid="footer-copyright-switcher-mobiletoggle"
        href=""
      >
        View Mobile Site
      </a>
    </div>
    <div
      class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root components__CopyrightText-sc-12mz8xb-0 jDvqEB MuiTypography-body2"
        data-testid="footer-copyright-text"
      >
        © 2020 AMIDO RETAIL LTD. ALL RIGHTS RESERVED.
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - Copyright:  Unhandled Copyright element type should match the snapshot template when element type is OtherCopyrightType 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__GridContainer-sc-12mz8xb-1 iQBAM MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX MuiGrid-item MuiGrid-grid-xs-12"
    >
      <a
        class="components__DeviceToggleLink-sc-12mz8xb-3 cbjhUi"
        data-testid="footer-copyright-switcher-mobiletoggle"
        href=""
      >
        View Mobile Site
      </a>
    </div>
    <div
      class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root components__CopyrightText-sc-12mz8xb-0 jDvqEB MuiTypography-body2"
        data-testid="footer-copyright-text"
      >
        © 2020 AMIDO RETAIL LTD. ALL RIGHTS RESERVED.
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - Copyright:  When deviceSwitcherFn is triggered and the url is on a subdomain should hide the device switchers 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__GridContainer-sc-12mz8xb-1 iQBAM MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root components__ChildGrid-sc-12mz8xb-2 jrDFRX MuiGrid-item MuiGrid-grid-xs-12"
    >
      <h3
        class="MuiTypography-root components__CopyrightText-sc-12mz8xb-0 jDvqEB MuiTypography-body2"
        data-testid="footer-copyright-text"
      >
        © 2020 AMIDO RETAIL LTD. ALL RIGHTS RESERVED.
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - Copyright:  default copyright should show copyright text with 2019 when the date is mocked 1`] = `
<DocumentFragment>
  <h3
    class="MuiTypography-root components__CopyrightText-sc-12mz8xb-0 jDvqEB MuiTypography-alignCenter"
    data-testid="footer-copyright-default-text"
  >
    © 2019 AMIDO Retail Ltd. All rights reserved.
  </h3>
</DocumentFragment>
`;
